--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ ourg.">
                                 <li><a href="#templatemo-wu">MARTIAL
                                 ARTS</a></li>
                                 <li><a href="#templatemo-biz">BUSINESS</a></li>
-                                <li><a href="#templatemo-portfolio">PHOTO</a></li>
+                                <!-- <li><a href="#templatemo-portfolio">PHOTO</a></li> -->
 <!--                                <li><a href="#templatemo-blog">BLOG</a></li>
 -->
                                 <li><a href="#templatemo-contact">CONTACT</a></li>
@@ -1023,145 +1023,145 @@ ourg.">
 
 
 
-        <div id="templatemo-portfolio" >
-            <div class="container">
-                <div class="row">
-                    <div class="templatemo-line-header" style="margin-top: 0px;" >
-                        <div class="text-center">
-                            <hr class="team_hr team_hr_left
-                            hr_gray"/><span class="txt_darkgrey">My Photo</span>
-                            <hr class="team_hr team_hr_right hr_gray" />
-                        </div>
+        <!-- <div id="templatemo-portfolio" > -->
+        <!--     <div class="container"> -->
+        <!--         <div class="row"> -->
+        <!--             <div class="templatemo-line-header" style="margin-top: 0px;" > -->
+        <!--                 <div class="text-center"> -->
+        <!--                     <hr class="team_hr team_hr_left -->
+        <!--                     hr_gray"/><span class="txt_darkgrey">My Photo</span> -->
+        <!--                     <hr class="team_hr team_hr_right hr_gray" /> -->
+        <!--                 </div> -->
 
 
-                    </div>
-                    <div class="clearfix"></div>
-                    <div class="templatemo-gallery-category" style="font-size:16px; margin-top:8px;">
-                        <div class="text-center">
-                            <a class="active" href=".gallery">All</a>
-                            / <a href=".CN">China</a>
-                            / <a href=".AU">Australia</a> 
-                            / <a href=".UK">UK</a>
-                            / <a href=".MA">Martial arts</a>
-                        </div>
-                    </div>
-                </div> <!-- /.row -->
+        <!--             </div> -->
+        <!--             <div class="clearfix"></div> -->
+        <!--             <div class="templatemo-gallery-category" style="font-size:16px; margin-top:8px;"> -->
+        <!--                 <div class="text-center"> -->
+        <!--                     <a class="active" href=".gallery">All</a> -->
+        <!--                     / <a href=".CN">China</a> -->
+        <!--                     / <a href=".AU">Australia</a>  -->
+        <!--                     / <a href=".UK">UK</a> -->
+        <!--                     / <a href=".MA">Martial arts</a> -->
+        <!--                 </div> -->
+        <!--             </div> -->
+        <!--         </div> <\!-- /.row -\-> -->
 
-                <div class="clearfix"></div>
-                <div class="text-center">
-                    <ul class="templatemo-project-gallery" >
+        <!--         <div class="clearfix"></div> -->
+        <!--         <div class="text-center"> -->
+        <!--             <ul class="templatemo-project-gallery" > -->
 
-                      <li class="col-lg-2 col-md-2 col-sm-2 gallery CN" >
-                            <a class="colorbox" href="images/my/deer_a.JPG" data-group="CN">
-                                <div class="templatemo-project-box">
-                                    <img src="images/my/deer_b.JPG" class="img-responsive" alt="CN" />
-                                    <div class="project-overlay">
-                                        <h5>Me</h5>
-                                        <hr />
-                                        <h4>China</h4>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-
-
-                      <li class="col-lg-2 col-md-2 col-sm-2 gallery UK" >
-                            <a class="colorbox" href="images/my/DSC_4303_a.JPG" data-group="UK">
-                                <div class="templatemo-project-box">
-                                    <img src="images/my/DSC_4303_b.JPG" class="img-responsive" alt="UK" />
-                                    <div class="project-overlay">
-                                        <h5>Me</h5>
-                                        <hr />
-                                        <h4>UK</h4>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-
-                      <li class="col-lg-2 col-md-2 col-sm-2 gallery AU" >
-                            <a class="colorbox" href="images/my/DSC05881_a.JPG" data-group="AU">
-                                <div class="templatemo-project-box">
-                                    <img src="images/my/DSC05881_b.JPG" class="img-responsive" alt="AU" />
-                                    <div class="project-overlay">
-                                        <h5>Me</h5>
-                                        <hr />
-                                        <h4>AU</h4>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
+        <!--               <li class="col-lg-2 col-md-2 col-sm-2 gallery CN" > -->
+        <!--                     <a class="colorbox" href="images/my/deer_a.JPG" data-group="CN"> -->
+        <!--                         <div class="templatemo-project-box"> -->
+        <!--                             <img src="images/my/deer_b.JPG" class="img-responsive" alt="CN" /> -->
+        <!--                             <div class="project-overlay"> -->
+        <!--                                 <h5>Me</h5> -->
+        <!--                                 <hr /> -->
+        <!--                                 <h4>China</h4> -->
+        <!--                             </div> -->
+        <!--                         </div> -->
+        <!--                     </a> -->
+        <!--                 </li> -->
 
 
-                      <li class="col-lg-2 col-md-2 col-sm-2 gallery UK" >
-                            <a class="colorbox" href="images/my/DSCN8011_a.JPG" data-group="UK">
-                                <div class="templatemo-project-box">
-                                    <img src="images/my/DSCN8011_b.JPG" class="img-responsive" alt="UK" />
-                                    <div class="project-overlay">
-                                        <h5>Me</h5>
-                                        <hr />
-                                        <h4>UK</h4>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
+        <!--               <li class="col-lg-2 col-md-2 col-sm-2 gallery UK" > -->
+        <!--                     <a class="colorbox" href="images/my/DSC_4303_a.JPG" data-group="UK"> -->
+        <!--                         <div class="templatemo-project-box"> -->
+        <!--                             <img src="images/my/DSC_4303_b.JPG" class="img-responsive" alt="UK" /> -->
+        <!--                             <div class="project-overlay"> -->
+        <!--                                 <h5>Me</h5> -->
+        <!--                                 <hr /> -->
+        <!--                                 <h4>UK</h4> -->
+        <!--                             </div> -->
+        <!--                         </div> -->
+        <!--                     </a> -->
+        <!--                 </li> -->
 
-                        <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
-                            <a class="colorbox" href="images/my/DSC02329_a.JPG" data-group="pet">
-                                <div class="templatemo-project-box">
-                                    <img src="images/my/DSC02329_b.JPG" class="img-responsive" alt="pet" />
-                                    <div class="project-overlay">
-                                        <h5>Pet</h5>
-                                        <hr />
-                                        <h4>Dog</h4>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
+        <!--               <li class="col-lg-2 col-md-2 col-sm-2 gallery AU" > -->
+        <!--                     <a class="colorbox" href="images/my/DSC05881_a.JPG" data-group="AU"> -->
+        <!--                         <div class="templatemo-project-box"> -->
+        <!--                             <img src="images/my/DSC05881_b.JPG" class="img-responsive" alt="AU" /> -->
+        <!--                             <div class="project-overlay"> -->
+        <!--                                 <h5>Me</h5> -->
+        <!--                                 <hr /> -->
+        <!--                                 <h4>AU</h4> -->
+        <!--                             </div> -->
+        <!--                         </div> -->
+        <!--                     </a> -->
+        <!--                 </li> -->
 
-                      <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
-                            <a class="colorbox" href="images/wu/wu_1a.JPG" data-group="MA">
-                                <div class="templatemo-project-box">
-                                    <img src="images/wu/wu_1b.JPG" class="img-responsive" alt="MA" />
-                                    <div class="project-overlay">
-                                        <h5>Martial arts</h5>
-                                        <hr />
-                                        <h4>Sanshou</h4>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
 
-                        <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
-                            <a class="colorbox" href="images/wu/wu_3a.jpg" data-group="MA">
-                                <div class="templatemo-project-box">
-                                    <img src="images/wu/wu_3b.jpg" class="img-responsive" alt="MA" />
-                                    <div class="project-overlay">
-                                        <h5>Martial arts</h5>
-                                        <hr />
-                                        <h4>Kung-Fu Kick</h4>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
+        <!--               <li class="col-lg-2 col-md-2 col-sm-2 gallery UK" > -->
+        <!--                     <a class="colorbox" href="images/my/DSCN8011_a.JPG" data-group="UK"> -->
+        <!--                         <div class="templatemo-project-box"> -->
+        <!--                             <img src="images/my/DSCN8011_b.JPG" class="img-responsive" alt="UK" /> -->
+        <!--                             <div class="project-overlay"> -->
+        <!--                                 <h5>Me</h5> -->
+        <!--                                 <hr /> -->
+        <!--                                 <h4>UK</h4> -->
+        <!--                             </div> -->
+        <!--                         </div> -->
+        <!--                     </a> -->
+        <!--                 </li> -->
 
-                        <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
-                            <a class="colorbox" href="images/wu/wu_2a.JPG" data-group="MA">
-                                <div class="templatemo-project-box">
-                                    <img src="images/wu/wu_2b.JPG" class="img-responsive" alt="MA" />
-                                    <div class="project-overlay">
-                                        <h5>Martial arts</h5>
-                                        <hr />
-                                        <h4>Wrestling</h4>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
+        <!--                 <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" > -->
+        <!--                     <a class="colorbox" href="images/my/DSC02329_a.JPG" data-group="pet"> -->
+        <!--                         <div class="templatemo-project-box"> -->
+        <!--                             <img src="images/my/DSC02329_b.JPG" class="img-responsive" alt="pet" /> -->
+        <!--                             <div class="project-overlay"> -->
+        <!--                                 <h5>Pet</h5> -->
+        <!--                                 <hr /> -->
+        <!--                                 <h4>Dog</h4> -->
+        <!--                             </div> -->
+        <!--                         </div> -->
+        <!--                     </a> -->
+        <!--                 </li> -->
+
+        <!--               <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" > -->
+        <!--                     <a class="colorbox" href="images/wu/wu_1a.JPG" data-group="MA"> -->
+        <!--                         <div class="templatemo-project-box"> -->
+        <!--                             <img src="images/wu/wu_1b.JPG" class="img-responsive" alt="MA" /> -->
+        <!--                             <div class="project-overlay"> -->
+        <!--                                 <h5>Martial arts</h5> -->
+        <!--                                 <hr /> -->
+        <!--                                 <h4>Sanshou</h4> -->
+        <!--                             </div> -->
+        <!--                         </div> -->
+        <!--                     </a> -->
+        <!--                 </li> -->
+
+        <!--                 <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" > -->
+        <!--                     <a class="colorbox" href="images/wu/wu_3a.jpg" data-group="MA"> -->
+        <!--                         <div class="templatemo-project-box"> -->
+        <!--                             <img src="images/wu/wu_3b.jpg" class="img-responsive" alt="MA" /> -->
+        <!--                             <div class="project-overlay"> -->
+        <!--                                 <h5>Martial arts</h5> -->
+        <!--                                 <hr /> -->
+        <!--                                 <h4>Kung-Fu Kick</h4> -->
+        <!--                             </div> -->
+        <!--                         </div> -->
+        <!--                     </a> -->
+        <!--                 </li> -->
+
+        <!--                 <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" > -->
+        <!--                     <a class="colorbox" href="images/wu/wu_2a.JPG" data-group="MA"> -->
+        <!--                         <div class="templatemo-project-box"> -->
+        <!--                             <img src="images/wu/wu_2b.JPG" class="img-responsive" alt="MA" /> -->
+        <!--                             <div class="project-overlay"> -->
+        <!--                                 <h5>Martial arts</h5> -->
+        <!--                                 <hr /> -->
+        <!--                                 <h4>Wrestling</h4> -->
+        <!--                             </div> -->
+        <!--                         </div> -->
+        <!--                     </a> -->
+        <!--                 </li> -->
                       
 
-                    </ul><!-- /.gallery -->
-                </div>
-            </div><!-- /.container -->
-        </div> <!-- /.templatemo-portfolio -->
+        <!--             </ul><\!-- /.gallery -\-> -->
+        <!--         </div> -->
+        <!--     </div><\!-- /.container -\-> -->
+        <!-- </div> <\!-- /.templatemo-portfolio -\-> -->
 
 
         <div id="templatemo-contact">
