--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ ourg.">
                           security and cryptography. In particular,
                           the focus of my research has been on design
                           and analysis of cryptographic protocols,
-                          cryptographic key management, and
-                          ledger-based (a.k.a. blockchain)
+                          cryptographic key management, blockchain
+                          consensus, and ledger-based
                           applications.<br><br>
 
 
