--- a/index.html
+++ b/index.html
@@ -745,17 +745,34 @@ ourg.">
                       
 	                    <li><b>External Reviewer (Conference):</b><br>
 	                      <ul type="circle">
-                                <li>2017: &ensp; EuroSys, &nbsp;  AsiaCCS, &nbsp;  DSN, &nbsp;  IFIP
-                               SEC, &nbsp;  ESORICS.</li>
-                                <li>2016: &ensp; IEEE Euro S&P, &nbsp; IFIP SEC, &nbsp;  ESSoS, &nbsp;  ESORICS, &nbsp;  WISTP.
+                                <li>2017: <a href="http://eurosys2017.org">EuroSys</a>,
+                               <a href="http://asiaccs2017.com/">AsiaCCS</a>,
+                               <a href="https://dsn2017.github.io/">DSN</a>,
+                               <a href="ifipsec.org/2017/">IFIP SEC</a>,
+                               <a href="https://www.ntnu.edu/esorics2017">ESORICS</a>.</li>
+                                <li>2016: <a href="http://www.ieee-security.org/TC/EuroSP2016/">
+                                IEEE Euro S&P</a>,
+                               <a href="ifipsec.org/2016/">IFIP SEC</a>,
+                               <a href="https://distrinet.cs.kuleuven.be/events/essos/2016/">ESSoS</a>,
+                               <a href="http://www.ics.forth.gr/esorics2016/">ESORICS</a>,
+                               <a href="http://www.wistp.org/">WISTP</a>.
                                 </li>
-                                <li>2015: &ensp; POST (ETAPS), &nbsp;  ASIACCS, &nbsp;  IFIP SEC. </li>
-                                <li>2014: &ensp; ACNS, &nbsp;  SEC, &nbsp;  FMS, &nbsp;  WPES. </li>
-                                <li>2013: &ensp; ACISP, &nbsp;  ESORICS, &nbsp;  DPM.</li>
+                                <li>2015: <a href="http://www.etaps.org/index.php/2015/post">
+                                POST (ETAPS)</a>,
+                               <a href="http://icsd.i2r.a-star.edu.sg/asiaccs15/"> ASIACCS</a>,
+                               <a href="ifipsec.org/2015/"> IFIP
+                               SEC</a>.</li>
+                                <li>2014: <a href="http://acns2014.epfl.ch/">ACNS</a>,
+		                  <a href="http://www.ensa.ac.ma/sec2014/"> SEC</a>,
+		                  <a href="http://fms-14.appspot.com/"> FMS</a>,
+		                  <a href="https://www.cylab.cmu.edu/news_events/events/wpes2014/">
+		                             WPES</a>, </li>
+                                <li>2013: <a href="http://www.acisp2013.qut.edu.au/">ACISP</a>,
+                                  <a href="http://esorics2013.isg.rhul.ac.uk/">ESORICS</a>,
+                                  <a href="http://research.icbnet.ntua.gr/DPM2013/">DPM</a>.</li>
 	                        <br>
 	                      </ul>
 	                    </li>
-
                     <!--   <li><b>Talk:</b><br> -->
 
                     <!--     <ul type="circle"> -->
