update journal review

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ ourg.">
                           Analysis of A Single Sign-On Mechanism for
                           Distributed Computer
                           Networks"</a></b>.<br> <i>IEEE Transactions
-                          on Industrial Informatics</i>, Vol.9, No.1,
+                          on Industrial Informatics (TII)</i>, Vol.9, No.1,
                           pp.294-302, 2013.
                           </li>
                         </ol>
@@ -702,15 +702,16 @@ ourg.">
 
 	                    <li><b>Invited Reviewer (Journal):</b><br>
 	                      <ul type="circle">
+                                <li><i> ACM Transactions on Transactions on Privacy and Security <b>(ACM TOPS)</b></i></li>
 	                        <li><i>IEEE
 	                        Transactions on Information Forensics &
-	                              Security</i></li>
+	                              Security <b>(IEEE TIFS)</b></i></li>
                                 <li><i>
                                       IEEE Transactions on Cloud
-                                      Computing
+                                      Computing <b>(IEEE TCC)</b>
                                 </i></li>
                                 <li><i>
-                                      IEEE Transactions on Industrial Informatics
+                                      IEEE Transactions on Industrial Informatics <b>(IEEE TII)</b>
                                 </i></li>
                                 <li><i>IEEE Wireless Communications</li></li>
                             <li><i>IEEE Access</li></li>
