fixes, added students

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ ourg.">
 				Esteves-Verissimo. "RepuCoin: Your
 				Reputation is Your
 				Power." <i>Cryptology ePrint Archive:
-				Report 2018/239.</li>
+				Report 2018/239.</i></li>
                               </ul>
                       </li>
                     </ul>
@@ -713,8 +713,8 @@ ourg.">
                                 <li><i>
                                       IEEE Transactions on Industrial Informatics <b>(IEEE TII)</b>
                                 </i></li>
-                                <li><i>IEEE Wireless Communications</li></li>
-                            <li><i>IEEE Access</li></li>
+                                <li><i>IEEE Wireless Communications</i></li>
+                            <li><i>IEEE Access</i></li>
                                 <li><i>
                                 Future Generation Computer Systems
                                 </i></li>
@@ -743,7 +743,7 @@ ourg.">
 	                    </li>
 
                       <br>
-                      
+
 	                    <li><b>External Reviewer (Conference):</b><br>
 	                      <ul type="circle">
                                 <li>2017: <a href="http://eurosys2017.org">EuroSys</a>,
@@ -824,7 +824,13 @@ ourg.">
                     <!--     </ul> -->
                     <!--   </li> -->
                     <!-- </ul> -->
-                    
+                    <font size="5"><b>PhD Student supervision:</b></font>
+	                  <ul type="circle"; style="margin-bottom:
+                              6px">
+                            <li> Tong Cao, 2018-2021 (expected). </li>
+                            <li> Cristian Mirto, 2018-2021 (expected). </li><br>
+                          </ul>
+
                           <font size="5"><b>Other
                     Links: </b></font>
 
