added Mark's charity

--- a/index.html
+++ b/index.html
@@ -139,7 +139,15 @@ ourg.">
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:4cm; overflow:auto">
-                        <li>
+                          <li>
+                        <li> <b>[2018-05-22]
+                          CHARITY</b> <br>Prof. Mark Ryan's Supporting
+                          for Aframano, a village in Ghana,
+                          Africa. See more detail
+                          at <a href="http://markryan.eu/aframano">
+                          markryan.eu/aframano
+                          </a>
+                          </li>
                           <b>[2017-10-11]</b> Interviewed
                           by <a href="http://www.eldo.lu/radio/reportagen/79488.html">Eldo
                           Radio</a> to explain end-to-end encryption
