added Mark's charity

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ ourg.">
                         <div style="height:4cm; overflow:auto">
                           <li>
                         <li> <b>[2018-05-22]
-                          CHARITY</b> <br>Prof. Mark Ryan's Supporting
+                          CHARITY.</b> Prof. Mark Ryan's Supporting
                           for Aframano, a village in Ghana,
                           Africa. See more detail
                           at <a href="http://markryan.eu/aframano">
