--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@ ourg.">
                     </b></font>
 	                  <ul type="disc"; style="margin-bottom:
                               6px">
-                            <li><b>Comference Committee</b></li>
+                            <li><b>Workshop Organization</b></li>
                             <ul type="circle">
                               <li>
                                 Co-Chair, 74th Meeting of the IFIP WG
@@ -678,6 +678,19 @@ ourg.">
                                 challenges to blockchain dependability
                                 and security, Clervaux, Luxembourg,
                                 2018.</li>
+                              <li>
+                                  Chair, <a href="https://blockchainbirmingham.wordpress.com/">
+                                  Workshop on BlockChain
+                                </a>, Birmingham, United Kingdom, 2015.</li>
+                              </ul><br>
+                              <li><b>Comference Committee</b></li>
+                            <ul type="circle">
+                              <li>
+                                PC
+                                member, <a href="http://globecom2018.ieee-globecom.org">IEEE
+                                Global Communications Conference
+                                (GLOBECOM), 2018.</a>
+                              </li>
                               <li>
                                 PC
                                 member, <a href="https://bcrb18.fim.uni-passau.de/index.html">
@@ -700,10 +713,6 @@ ourg.">
                                   Experience (ISPEC), 2017.
                               </a></li>
 	                      <li>PC member, <a href="http://mkp.com">Software Architecture for Big Data and the Cloud, 2016.</a></li>
-                              <li>
-                                  Chair, <a href="https://blockchainbirmingham.wordpress.com/">
-                                  Workshop on BlockChain
-                                </a>, Birmingham, United Kingdom, September 18, 2015.</li>
                             </ul>
                             
                             <br>
