update on monash

--- a/index.html
+++ b/index.html
@@ -104,10 +104,13 @@ ourg.">
                       <div class="clearfix"></div>
                     </div>
                     <div class="col-lg-offset-4 JYuinfo_right">
-                      <p> <font size="4"> I am a
-                          research fellow working
-                          with <a href="http://wwwen.uni.lu/snt/people/paulo_esteves_verissimo">
-                            Prof. Paulo Esteves-Verissimo
+                      <p> <font size="4"> I'll be a lecturer
+                      (equivalent to U.S. assistant professor) at
+                      Monash Unviersity, Australia, from this
+                      September. Currently, I am a research fellow
+                      working
+                      with <a href="http://wwwen.uni.lu/snt/people/paulo_esteves_verissimo">
+                      Prof. Paulo Esteves-Verissimo
                           </a>
                           at <a href="http://wwwen.uni.lu/snt/research/critix">
                             CritiX
@@ -139,7 +142,6 @@ ourg.">
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:4cm; overflow:auto">
-                          <li>
                         <li> <b>[2018-05-22]
                           CHARITY.</b> Prof. Mark Ryan's Supporting
                           for Aframano, a village in Ghana,
