--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ ourg.">
                                   communications"</b>.<br>
                                   <i>
                                     IEEE Security & Privacy
-                                  </i>, 2017, to appear.
+                                  </i>, 2018, to appear.
                                 </li>
 
                                 <li>
@@ -412,8 +412,8 @@ ourg.">
                                   Messaging"</a></b>.<br>
                                   <i>IEEE Transactions on Information
                                     Forensics and Security (TIFS)</i>,
-                                    2017, to
-                                    appear. (<a href="doc/paper/DECIM-proof.zip">Tamarin
+                                    Vol. 13, No.1, pp. 106-118,
+                                    2018. (<a href="doc/paper/DECIM-proof.zip">Tamarin
                                     code</a>)
                                 </li>
                           <li>
@@ -421,7 +421,7 @@ ourg.">
                             Ryan. <br><a href="https://arxiv.org/pdf/1408.1023.pdf"><b>"DTKI:
                             a new formalized PKI with verifiable
                             trusted parties"</b></a>. <br><i> The
-                            computer Journal </i>, Vol. 59 No. 11,
+                            computer Journal </i>, Vol. 59, No. 11,
                             pp. 1695-1713,
                             2016. (<a href="doc/paper/DTKI-proof.zip">Tamarin
                             code</a>
@@ -458,14 +458,14 @@ ourg.">
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
                             Detecting the Misuse of Secrets:
                             Foundations, Design Principles, and
-                            Applications"</b></a>. <br> <i> IEEE CSF 2017. (To appear)
+                            Applications"</b></a>. <br> <i> IEEE CSF 2017.
                             </i>
                           </li>
 
                           <li>
                             Jiangshan Yu, Mark Ryan and Liqun
                             Chen. <br> <a href="http://eprint.iacr.org/2017/485.pdf"><b>"Authenticating
-                            compromisable storage systems"</b></a>, <br>IEEE TrustCom 2017. (To appear)
+                            compromisable storage systems"</b></a>, <br> <i>IEEE TrustCom 2017.</i>
                           </li>
 
                           <li>Marcus Völp, Francisco Rocha, Jérémie
@@ -474,7 +474,7 @@ ourg.">
                           Reencryption: How to Survive Generations of
                           Cryptanalysts to
                           Come"</b></a>.<br> <i>Security Protocols
-                          XXV</i>, 2017. (To appear)</li>
+                          XXV</i>, 2017.</li>
 
                           <li>Jiangshan Yu and Mark
                           Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
