--- a/index.html
+++ b/index.html
@@ -572,41 +572,47 @@ ourg.">
                               </li><br>
 
 	                    <li><b>Awards:</b><br>
-	                      <ul type="circle">
-                                <li> Chinese Government Award For
-                                Outstanding PhD Scholar Abroad,
+	                      <ol type="circle">
+                                <li> <b>Chinese Government Award For
+                                Outstanding PhD Scholar Abroad</b>,
                                   2016. (3% in UK, 1% worldwide.)</li>
-                                <li>First place award, the Coniston
-                                  poster competition, University of
+                                <li>
+                                  <b>Finalist for RAEng Enterprise
+                                  Fellowship </b>, Royal Academy of
+                                  Engineering (RAEng), UK. 2015.
+                                </li>
+
+                                <li> <b>First place award, the Coniston
+                                  poster competition</b>, University of
                                   Birmingham, UK, 2014.</li>
-                                <li>Outstanding Graduates of Heilongjiang Province, Heilongjiang,
+                                <li><b>Outstanding Graduates of Heilongjiang Province</b>, Heilongjiang,
                                   China, 2009.</li>
-                                <li>Outstanding Graduates of Northeast Agricultural University,
+                                <li><b>Outstanding Graduates of Northeast Agricultural University</b>,
                                   Harbin, Heilongjiang, China, 2009.</li>
-                                <li>Best Undergraduate Thesis Award, Northeast Agricultural
+                                <li><b>Best Undergraduate Thesis Award</b>, Northeast Agricultural
                                   University, Harbin, Heilongjiang, China, 2009.</li>
-                                <li>Outstanding Academic Award, The Northeast Agricultural
+                                <li><b>Outstanding Academic Award</b>, The Northeast Agricultural
                                   University, China, 2008.</li>
                                 <li>
-                                  First National Prize of China
+                                  <b>First National Prize of China
                                   Contemporary Undergraduate
-                                  Mathematical Contest in Modeling,
+                                  Mathematical Contest in Modeling</b>,
                                   China, 2007.
                                 </li>
                                 <li>
-                                  Second National Prize of China Contemporary Undergraduate
-                                  Mathematical Contest in Modeling, China, 2006.
+                                  <b>Second National Prize of China Contemporary Undergraduate
+                                  Mathematical Contest in Modeling</b>, China, 2006.
                                 </li>
-                                <li>Outstanding Student Award of The Northeast Agricultural
+                                <li><b>Outstanding Student Award of The Northeast Agricultural
+                                  University</b>, China, 2006.</li>
+                                <li><b>Outstanding Student Leadership
+                                  Award</b>, The Northeast Agricultural
                                   University, China, 2006.</li>
-                                <li>Outstanding Student Leadership
-                                  Award, The Northeast Agricultural
-                                  University, China, 2006.</li>
-	                      </ul>
+	                      </ol>
 	                    </li>
                       <br>
 	                    <li><b>Scholarships:</b><br>
-	                      <ul type="circle">
+	                      <ol type="circle">
 	                        <li> Universitas 21 scholarship from
                                   the University of Birmingham,
                                   2015.</li>
@@ -626,7 +632,7 @@ ourg.">
                                   Agricultural University, Harbin,
                                   Heilongjiang, China, 2006.</li>
 
-	                      </ul>
+	                      </ol>
 	                    </li>
                           </ul>
                           <br>
