--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@ ourg.">
                                       Networks
                                 </i></li>
 				<li><i>The Computer Journal</i></li>
+                                <li><i>Computers & Security</i></li>
                                 <li><i>
                                       International Journal of
                                       Information Security
