--- a/index.html
+++ b/index.html
@@ -95,10 +95,17 @@ ourg.">
                         <br>
                           <img style="width: 310px; height: 230px;"
                               src="images/J-Yu.jpg"
-                               alt="icon">
+                               alt="icon"> <br><br><br><br>
+                          <div style="width: 310px; height:
+                          230px;"> <b>Prospective PhD Students:</b><br><br>
+
+                            My life would be happier if I found very
+                            good PhD students to work with. If this is
+                            you, do apply! <br> <a href="doc/phd_ad.txt">More info.</a>
+                            </div>
                           <!-- </div> -->
                           <br>
-                          <br><br><br>
+                          <br>
                         <br class="clearfix"/>
                       </div>
                       <div class="clearfix"></div>
@@ -141,7 +148,7 @@ ourg.">
                     </div>
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
-                        <div style="height:4cm; overflow:auto">
+                        <div style="height:9cm; overflow:auto">
                         <li> <b>[2018-05-22]
                           CHARITY.</b> Prof. Mark Ryan's Supporting
                           for Aframano, a village in Ghana,
